--- a/AlfaSdk/src/main/AndroidManifest.xml
+++ b/AlfaSdk/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
 
     <application
         android:name=".Application"
-        android:networkSecurityConfig="@xml/network_security_xml">
+        android:networkSecurityConfig="@xml/network_security_xml"
+        >
+
+
         <activity android:name=".EmptyActivity"></activity>
         <activity
             android:name=".LoginActivity"
@@ -21,7 +24,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".ChartsActivity"
