--- a/AlfaSdk/build.gradle
+++ b/AlfaSdk/build.gradle
@@ -33,16 +33,16 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation files('libs\\achartengine-0.7.0.jar')
-    implementation files('libs\\Infragistics.DataChart.jar')
-    implementation files('libs\\Infragistics.Core.jar')
-    implementation files('libs\\Infragistics.DV.Shared.jar')
-    implementation files('libs\\Infragistics.UI.jar')
+    implementation files('libs/achartengine-0.7.0.jar')
+    implementation files('libs/Infragistics.DataChart.jar')
+    implementation files('libs/Infragistics.Core.jar')
+    implementation files('libs/Infragistics.DV.Shared.jar')
+    implementation files('libs/Infragistics.UI.jar')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'net.orange-box.storebox:storebox-lib:1.3.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.nineoldandroids:library:2.4.0'
@@ -50,8 +50,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.hudomju:swipe-to-dismiss-undo:1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    testImplementation 'junit:junit:4.13.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.20'
