--- a/AlfaSdk/build.gradle
+++ b/AlfaSdk/build.gradle
@@ -5,7 +5,9 @@ plugins {
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
-
+    lintOptions {
+        abortOnError false
+    }
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 29
@@ -34,7 +36,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation files('libs/achartengine-0.7.0.jar')
-    implementation files('libs/Infragistics.DataChart.jar')
     implementation files('libs/Infragistics.Core.jar')
     implementation files('libs/Infragistics.DV.Shared.jar')
     implementation files('libs/Infragistics.UI.jar')
@@ -43,7 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'net.orange-box.storebox:storebox-lib:1.3.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
