--- a/AlfaSdk/src/main/AndroidManifest.xml
+++ b/AlfaSdk/src/main/AndroidManifest.xml
@@ -16,12 +16,12 @@
 
         <activity android:name=".EmptyActivity"></activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".MyLoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MyMainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
