--- a/AlfaSdk/src/main/AndroidManifest.xml
+++ b/AlfaSdk/src/main/AndroidManifest.xml
@@ -10,11 +10,9 @@
 
     <application
         android:name=".Application"
-        android:networkSecurityConfig="@xml/network_security_xml"
-        >
-
-
-        <activity android:name=".EmptyActivity"></activity>
+        android:networkSecurityConfig="@xml/network_security_xml">
+        <activity android:name="com.example.MenuActivity"></activity>
+        <activity android:name=".EmptyActivity" />
         <activity
             android:name=".MyLoginActivity"
             android:label="@string/app_name"
