--- a/AlfaSdk/build.gradle
+++ b/AlfaSdk/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation files('libs/Infragistics.DV.Shared.jar')
     implementation files('libs/Infragistics.UI.jar')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
