--- a/AlfaSdk/build.gradle
+++ b/AlfaSdk/build.gradle
@@ -53,7 +53,10 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.13.1'
+
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.20'
     implementation 'com.android.volley:volley:1.1.1'
